split dataset into train and test

--- a/model/baseline models.ipynb
+++ b/model/baseline models.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "X_ = clean_pipeline.fit_transform(X,Y)\n",
+    "X_ = clean_pipeline.fit_transform(X, Y)\n",
     "X_"
    ],
    "metadata": {
@@ -192,6 +192,30 @@
    ],
    "source": [
     "X_.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "((1168, 79), (292, 79), (1168,), (292,))"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_x, test_x, train_y, test_y = train_test_split(X_, Y, test_size=0.2, random_state=48)\n",
+    "train_x.shape, test_x.shape, train_y.shape, test_y.shape"
    ],
    "metadata": {
     "collapsed": false,
