test rfe with cross validation

--- a/model/feature selection.ipynb
+++ b/model/feature selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,7 +21,14 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.preprocessing import QuantileTransformer\n",
     "\n",
+    "# metrics to evaluate models\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import max_error\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "# feature selection\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn.feature_selection import SelectKBest\n",
@@ -147,11 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "ridge_estimator = Ridge(alpha=0.5, max_iter=5000)\n",
-    "ransac_estimator = RANSACRegressor(ridge_estimator, min_samples=50, max_trials=250)\n",
     "sgd_estimator = SGDRegressor()\n",
     "tree_estimator = DecisionTreeRegressor(max_depth=20, min_samples_split=25)\n",
     "forest_estimator = RandomForestRegressor(max_depth=20, min_samples_split=25)"
@@ -165,13 +171,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
-   "source": [],
+   "source": [
+    "cv = RepeatedKFold(n_splits=6, n_repeats=12, random_state=48)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "rfecv = []\n",
+    "\n",
+    "for metric in [r2_score, max_error, mean_squared_error]:\n",
+    "    for estimator in [ridge_estimator, sgd_estimator, tree_estimator, forest_estimator]:\n",
+    "        rfecv.append(RFECV(estimator=estimator,\n",
+    "                           cv=cv,\n",
+    "                           scoring=make_scorer(metric),\n",
+    "                           n_jobs=-1).fit(X_, Y))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
