OLS polynomial function

--- a/model/poly models.ipynb
+++ b/model/poly models.ipynb
@@ -3,11 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
@@ -54,7 +52,13 @@
     "# tree models\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.tree import ExtraTreeRegressor"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -66,6 +70,47 @@
     "Y = house_data['SalePrice']\n",
     "X.shape, Y.shape"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train_x, test_x, train_y, test_y = train_test_split(X, Y, test_size=0.2, random_state=48)\n",
+    "train_x.shape, test_x.shape, train_y.shape, test_y.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "cv = RepeatedKFold(n_splits=12, n_repeats=24, random_state=64)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -110,7 +155,10 @@
     "                                                                  k=20))],\n",
     "                         )\n",
     "\n",
-    "base_pipeline.get_params()"
+    "tuning_pipeline = Pipeline(steps=[('base_pipeline', base_pipeline),\n",
+    "                                  ('poly_func', PolynomialFeatures()),\n",
+    "                                  ('linear_model', LinearRegression())])\n",
+    "tuning_pipeline.get_params()"
    ],
    "metadata": {
     "collapsed": false,
@@ -124,37 +172,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "X_ = base_pipeline.fit_transform(X, Y)\n",
-    "X_"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "train_x, test_x, train_y, test_y = train_test_split(X_, Y, test_size=0.2, random_state=48)\n",
-    "train_x.shape, test_x.shape, train_y.shape, test_y.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "cv = RepeatedKFold(n_splits=12, n_repeats=24, random_state=64)\n"
+    "repeat = 12\n",
+    "gs_ols = RandomizedSearchCV(estimator=tuning_pipeline,\n",
+    "                            param_distributions={'poly_func__degree': np.random.randint(low=2, high=12, size=5)},\n",
+    "                            scoring={'r2': make_scorer(r2_score),\n",
+    "                                     'me': make_scorer(max_error),\n",
+    "                                     'mse': make_scorer(mean_squared_error)},\n",
+    "                            refit='me',\n",
+    "                            cv=cv,\n",
+    "                            n_jobs=-1\n",
+    "                            )\n",
+    "gs_ols.fit(train_x, train_y)"
    ],
    "metadata": {
     "collapsed": false,
