ridge hypermarket training!!

--- a/model/tuner.ipynb
+++ b/model/tuner.ipynb
@@ -190,13 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hewar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:645: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 5.397e+09, tolerance: 7.405e+08\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "GridSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n             estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                       ('lasso', Lasso())]),\n             n_jobs=-1,\n             param_grid={'lasso__alpha': array([9.86806311e-04, 3.81430696e+00, 1.53425497e-02, 3.91884000e+00,\n       7.96058440e+02, 2.03425451e-02, 6.95414589e-01, 1.25299019e+01,\n       9.74090183e-02, 8.71121918e+02, 9.44227064e-01, 1.11936352e+01,\n       5.41601376e-02, 1.20546714e+01, 8.57357934e+00, 3.08929287e+02,\n       9.12962041e-04, 9.38644213e-03, 2.36389524e+00, 3.70308296e-02,\n       7.01168270e-01, 4.82841423e-03, 1.36398950e-05, 7.17478394e+00,\n       3.13054565e-03]),\n                         'lasso__max_iter': array([4971, 4360, 1132, 6330])})"
+      "text/plain": "GridSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n             estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                       ('lasso', Lasso())]),\n             n_jobs=-1,\n             param_grid={'lasso__alpha': array([1.36240559e+00, 5.09650935e-04, 1.36518178e-03, 2.34427570e+00,\n       3.94148561e-02, 1.19543881e-03, 1.34546427e+03, 1.39763998e-01,\n       8.91411678e+00, 3.89664653e+00, 2.22187391e+00, 7.39601408e+02,\n       6.53411636e-02, 4.27754032e-03, 4.99826970e-02, 5.16190912e+01,\n       2.01002633e-01, 5.62079557e+00, 1.40125439e-02, 3.13203511e-01,\n       6.56560299e+00, 9.63509355e+01, 5.52455953e-03, 3.22991033e-03,\n       1.28071478e+01]),\n                         'lasso__max_iter': array([3411, 5502, 5985, 2687])},\n             refit='r2',\n             scoring={'me': make_scorer(max_error),\n                      'r2': make_scorer(r2_score)})"
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,13 +234,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'lasso__alpha': 12.807147786982478, 'lasso__max_iter': 2687},\n 0.8582179183379455)"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1_grid_search.best_params_, l1_grid_search.best_score_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures()), ('ridge', Ridge())],\n 'verbose': False,\n 'poly': PolynomialFeatures(),\n 'ridge': Ridge(),\n 'poly__degree': 2,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'ridge__alpha': 1.0,\n 'ridge__copy_X': True,\n 'ridge__fit_intercept': True,\n 'ridge__max_iter': None,\n 'ridge__normalize': 'deprecated',\n 'ridge__positive': False,\n 'ridge__random_state': None,\n 'ridge__solver': 'auto',\n 'ridge__tol': 0.001}"
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,15 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "GridSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n             estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                       ('ridge', Ridge())]),\n             n_jobs=-1,\n             param_grid={'ridge__alpha': array([1.31126344e+02, 3.89911045e-01, 1.57619448e+00, 1.25777725e+00,\n       3.31674693e-02, 3.75486593e-03, 9.82609112e-03, 6.72825549e+05,\n       1.38327667e+03, 1.18260102e+06, 2.23209131e+00, 3.55747948e+00,\n       3.69327214e+00, 6.40218447e+01, 4.37709079e-01, 4.89488876e-03,\n       1.28600521e-01, 2.07991834e-03, 5.37884562e-01, 1.55284967e+01,\n       6.75642940e-03, 2.62140261e+01, 3.40807308e-01, 1.51681554e-02,\n       2.47807479e+00]),\n                         'ridge__max_iter': array([6055, 5819, 1835, 3678])},\n             refit='r2',\n             scoring={'me': make_scorer(max_error),\n                      'r2': make_scorer(r2_score)})"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l1_grid = {'ridge__alpha': np.exp(np.random.normal(0, 5, 25)),\n",
-    "           'lasso__max_iter': np.random.randint(1000, 6580, 4)\n",
+    "l2_grid = {'ridge__alpha': np.exp(np.random.normal(0, 5, 25)),\n",
+    "           'ridge__max_iter': np.random.randint(1000, 6580, 4)\n",
     "           }\n",
     "\n",
-    "l1_grid_search = GridSearchCV(estimator=L1_model,\n",
-    "                              param_grid=l1_grid,\n",
+    "l2_grid_search = GridSearchCV(estimator=L2_model,\n",
+    "                              param_grid=l2_grid,\n",
     "                              scoring={'r2': make_scorer(r2_score),\n",
     "                                       'me': make_scorer(max_error)\n",
     "                                       },\n",
@@ -267,7 +307,7 @@
     "                              n_jobs=-1,\n",
     "                              cv=cv)\n",
     "\n",
-    "l1_grid_search.fit(train_x, train_y)"
+    "l2_grid_search.fit(train_x, train_y)"
    ],
    "metadata": {
     "collapsed": false,
@@ -278,18 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([4.17862549e-05, 5.19053030e-01, 2.90003534e+02, 4.00091571e-02,\n       2.21592788e+00, 4.14039177e+00, 5.12886532e-05, 2.75553689e+01,\n       1.75310390e+01, 4.20822692e-02, 3.18512936e+00, 8.60916792e-04,\n       4.25265143e+01, 2.31982973e+05, 1.05347118e-02, 3.76209160e-01,\n       3.19664350e+00, 4.08110251e+00, 3.09746290e+04, 6.21856298e-06,\n       1.10332036e-04, 4.69693245e+00, 2.69553197e-01, 1.03493772e+02,\n       3.98737158e-02])"
+      "text/plain": "({'ridge__alpha': 0.5378845624526254, 'ridge__max_iter': 6055},\n 0.8602809816793933)"
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [],
+   "source": [
+    "l2_grid_search.best_params_, l2_grid_search.best_score_"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
