stochastic gradient decent hyper-parameter tuning and dump cv_results_

--- a/model/tuner.ipynb
+++ b/model/tuner.ipynb
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "((1460, 79), (1460,))"
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "cv = RepeatedKFold(n_splits=6, n_repeats=12, random_state=64)"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "base_pipeline = Pipeline(steps=[('most_miss_cat', imputation.CategoricalImputer(variables=['Alley',\n",
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "((1168, 20), (292, 20), (1168,), (292,))"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,120 @@
    "outputs": [],
    "source": [
     "temp_elasticNet_cv_result = pd.DataFrame(elasticNet_grid_search.cv_results_)\n",
-    "temp_elasticNet_cv_result.to_pickle('../data/cv_results/elasticNet_cv_result.pkl')\n"
+    "temp_elasticNet_cv_result.to_pickle('../data/cv_results/elasticNet_cv_result.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures()), ('SDG', SGDRegressor())],\n 'verbose': False,\n 'poly': PolynomialFeatures(),\n 'SDG': SGDRegressor(),\n 'poly__degree': 2,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'SDG__alpha': 0.0001,\n 'SDG__average': False,\n 'SDG__early_stopping': False,\n 'SDG__epsilon': 0.1,\n 'SDG__eta0': 0.01,\n 'SDG__fit_intercept': True,\n 'SDG__l1_ratio': 0.15,\n 'SDG__learning_rate': 'invscaling',\n 'SDG__loss': 'squared_error',\n 'SDG__max_iter': 1000,\n 'SDG__n_iter_no_change': 5,\n 'SDG__penalty': 'l2',\n 'SDG__power_t': 0.25,\n 'SDG__random_state': None,\n 'SDG__shuffle': True,\n 'SDG__tol': 0.001,\n 'SDG__validation_fraction': 0.1,\n 'SDG__verbose': 0,\n 'SDG__warm_start': False}"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SDG_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=2)),\n",
+    "                            ('SDG', SGDRegressor())])\n",
+    "SDG_model.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hewar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py:1509: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "RandomizedSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n                   estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                             ('SDG', SGDRegressor())]),\n                   n_iter=100, n_jobs=-1,\n                   param_distributions={'SDG__alpha': array([3.71135299e+01, 2.73985790e+00, 1.17096216e+01, 1.56372274e-01,\n       6.94351611e+01, 1.33771364e+00, 4.00236601e+05, 4.00155904e-02,\n       5.86957500...1, 5.84622268e+04, 2.44566533e-01]),\n                                        'SDG__l1_ratio': array([0.   , 0.125, 0.25 , 0.375, 0.5  , 0.625, 0.75 , 0.875, 1.   ]),\n                                        'SDG__learning_rate': ['constant',\n                                                               'optimal',\n                                                               'adaptive'],\n                                        'SDG__max_iter': array([7039, 5594, 4742, 7416, 4149, 8988, 9774, 2297, 7699, 3373]),\n                                        'SDG__penalty': ['l2', 'l1',\n                                                         'elasticnet']},\n                   refit='r2',\n                   scoring={'me': make_scorer(max_error),\n                            'r2': make_scorer(r2_score)})"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdg_iteration = 100\n",
+    "\n",
+    "SDG_grid = {'SDG__alpha': np.exp(np.random.normal(0, 5, 12)),\n",
+    "            'SDG__max_iter': np.random.randint(1000, 10000, 10),\n",
+    "            'SDG__l1_ratio': np.linspace(0, 1, 9),\n",
+    "            'SDG__penalty': ['l2', 'l1', 'elasticnet'],\n",
+    "            'SDG__learning_rate': ['constant', 'optimal', 'adaptive']\n",
+    "            }\n",
+    "\n",
+    "SDG_grid_search = RandomizedSearchCV(estimator=SDG_model,\n",
+    "                                     param_distributions=SDG_grid,\n",
+    "                                     scoring={'r2': make_scorer(r2_score),\n",
+    "                                              'me': make_scorer(max_error)\n",
+    "                                              },\n",
+    "                                     refit='r2',\n",
+    "                                     n_jobs=-1,\n",
+    "                                     n_iter=sdg_iteration,\n",
+    "                                     cv=cv)\n",
+    "\n",
+    "SDG_grid_search.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'SDG__penalty': 'l1',\n  'SDG__max_iter': 4742,\n  'SDG__learning_rate': 'adaptive',\n  'SDG__l1_ratio': 0.5,\n  'SDG__alpha': 5.869575002873918e-05},\n 0.8567255105682428)"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SDG_grid_search.best_params_, SDG_grid_search.best_score_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "temp_SDG_cv_result = pd.DataFrame(SDG_grid_search.cv_results_)\n",
+    "temp_SDG_cv_result.to_pickle('../data/cv_results/SDG_cv_result.pkl')"
    ],
    "metadata": {
     "collapsed": false,
