k nearest neighbors hyper-parameter tuning and dump cv_results_

--- a/model/tuner.ipynb
+++ b/model/tuner.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import np as np\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -585,6 +586,121 @@
     "temp_SDG_cv_result = pd.DataFrame(SDG_grid_search.cv_results_)\n",
     "temp_SDG_cv_result.to_pickle('../data/cv_results/SDG_cv_result.pkl')"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures(degree=4)),\n  ('KNN', KNeighborsRegressor())],\n 'verbose': False,\n 'poly': PolynomialFeatures(degree=4),\n 'KNN': KNeighborsRegressor(),\n 'poly__degree': 4,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'KNN__algorithm': 'auto',\n 'KNN__leaf_size': 30,\n 'KNN__metric': 'minkowski',\n 'KNN__metric_params': None,\n 'KNN__n_jobs': None,\n 'KNN__n_neighbors': 5,\n 'KNN__p': 2,\n 'KNN__weights': 'uniform'}"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KNN_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=4)),\n",
+    "                            ('KNN', KNeighborsRegressor())])\n",
+    "KNN_model.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomizedSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n                   estimator=Pipeline(steps=[('poly',\n                                              PolynomialFeatures(degree=4)),\n                                             ('KNN', KNeighborsRegressor())]),\n                   n_iter=24, n_jobs=-1,\n                   param_distributions={'KNN__algorithm': ['brute', 'kd_tree',\n                                                           'ball_tree'],\n                                        'KNN__leaf_size': array([77, 77, 83, 69, 37, 90, 42, 44, 64, 66, 39, 55]),\n                                        'KNN__n_neighbors': array([46, 48, 37, 29, 30, 46, 11, 13, 41, 24, 20, 25])},\n                   refit='r2',\n                   scoring={'me': make_scorer(max_error),\n                            'r2': make_scorer(r2_score)})"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KNN_iteration = 24\n",
+    "\n",
+    "KNN_grid = {'KNN__algorithm': ['brute', 'kd_tree', 'ball_tree'],\n",
+    "            'KNN__leaf_size': np.random.randint(30, 100, 12),\n",
+    "            'KNN__n_neighbors': np.random.randint(7, 51, 12),\n",
+    "            }\n",
+    "\n",
+    "KNN_grid_search = RandomizedSearchCV(estimator=KNN_model,\n",
+    "                                     param_distributions=KNN_grid,\n",
+    "                                     scoring={'r2': make_scorer(r2_score),\n",
+    "                                              'me': make_scorer(max_error)\n",
+    "                                              },\n",
+    "                                     refit='r2',\n",
+    "                                     n_jobs=-1,\n",
+    "                                     n_iter=KNN_iteration,\n",
+    "                                     cv=cv)\n",
+    "\n",
+    "KNN_grid_search.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'KNN__n_neighbors': 11, 'KNN__leaf_size': 77, 'KNN__algorithm': 'ball_tree'},\n 0.7853041378821608)"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KNN_grid_search.best_params_, KNN_grid_search.best_score_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "temp_KNN_cv_result = pd.DataFrame(KNN_grid_search.cv_results_)\n",
+    "temp_KNN_cv_result.to_pickle('../data/cv_results/KNN_cv_result.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
