decision tree hyper-parameter tuning and dump cv_results_

--- a/model/tuner.ipynb
+++ b/model/tuner.ipynb
@@ -698,9 +698,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures(degree=4)),\n  ('DT', DecisionTreeRegressor())],\n 'verbose': False,\n 'poly': PolynomialFeatures(degree=4),\n 'DT': DecisionTreeRegressor(),\n 'poly__degree': 4,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'DT__ccp_alpha': 0.0,\n 'DT__criterion': 'squared_error',\n 'DT__max_depth': None,\n 'DT__max_features': None,\n 'DT__max_leaf_nodes': None,\n 'DT__min_impurity_decrease': 0.0,\n 'DT__min_samples_leaf': 1,\n 'DT__min_samples_split': 2,\n 'DT__min_weight_fraction_leaf': 0.0,\n 'DT__random_state': None,\n 'DT__splitter': 'best'}"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DT_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=4)),\n",
+    "                           ('DT', DecisionTreeRegressor())])\n",
+    "DT_model.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomizedSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n                   estimator=Pipeline(steps=[('poly',\n                                              PolynomialFeatures(degree=4)),\n                                             ('DT', DecisionTreeRegressor())]),\n                   n_iter=64, n_jobs=-1,\n                   param_distributions={'DT__ccp_alpha': array([6, 7, 3, 6, 3, 6]),\n                                        'DT__max_depth': array([27, 25, 36, 77, 36, 73, 41, 95, 74, 98, 98, 70]),\n                                        'DT__max_features': ['auto', 'sqrt',\n                                                             'log2'],\n                                        'DT__min_samples_leaf': array([21, 94, 36, 89, 88, 15, 86, 33, 60, 44, 27, 90]),\n                                        'DT__min_samples_split': array([38, 24, 50, 22, 54, 59, 54, 79, 32, 20, 37, 23]),\n                                        'DT__splitter': ['best', 'random']},\n                   refit='r2',\n                   scoring={'me': make_scorer(max_error),\n                            'r2': make_scorer(r2_score)})"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DT_iteration = 64\n",
+    "\n",
+    "DT_grid = {'DT__splitter': ['best', 'random'],\n",
+    "           'DT__max_depth': np.random.randint(25, 100, 12),\n",
+    "           'DT__min_samples_split': np.random.randint(20, 90, 12),\n",
+    "           'DT__min_samples_leaf': np.random.randint(14, 100, 12),\n",
+    "           'DT__max_features': ['auto', 'sqrt', 'log2'],\n",
+    "           'DT__ccp_alpha': np.random.randint(0, 12, 6)\n",
+    "           }\n",
+    "\n",
+    "DT_grid_search = RandomizedSearchCV(estimator=DT_model,\n",
+    "                                    param_distributions=DT_grid,\n",
+    "                                    scoring={'r2': make_scorer(r2_score),\n",
+    "                                             'me': make_scorer(max_error)\n",
+    "                                             },\n",
+    "                                    refit='r2',\n",
+    "                                    n_jobs=-1,\n",
+    "                                    n_iter=DT_iteration,\n",
+    "                                    cv=cv)\n",
+    "\n",
+    "DT_grid_search.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'DT__splitter': 'best',\n  'DT__min_samples_split': 20,\n  'DT__min_samples_leaf': 21,\n  'DT__max_features': 'auto',\n  'DT__max_depth': 36,\n  'DT__ccp_alpha': 6},\n 0.8068847016905996)"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DT_grid_search.best_params_, DT_grid_search.best_score_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "outputs": [],
-   "source": [],
+   "source": [
+    "temp_DT_cv_result = pd.DataFrame(DT_grid_search.cv_results_)\n",
+    "temp_DT_cv_result.to_pickle('../data/cv_results/DT_cv_result.pkl')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
