extra tree hyper-parameter tuning and dump cv_results_

--- a/model/tuner.ipynb
+++ b/model/tuner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -794,6 +794,111 @@
    "source": [
     "temp_DT_cv_result = pd.DataFrame(DT_grid_search.cv_results_)\n",
     "temp_DT_cv_result.to_pickle('../data/cv_results/DT_cv_result.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures(degree=4)),\n  ('ET', ExtraTreeRegressor())],\n 'verbose': False,\n 'poly': PolynomialFeatures(degree=4),\n 'ET': ExtraTreeRegressor(),\n 'poly__degree': 4,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'ET__ccp_alpha': 0.0,\n 'ET__criterion': 'squared_error',\n 'ET__max_depth': None,\n 'ET__max_features': 'auto',\n 'ET__max_leaf_nodes': None,\n 'ET__min_impurity_decrease': 0.0,\n 'ET__min_samples_leaf': 1,\n 'ET__min_samples_split': 2,\n 'ET__min_weight_fraction_leaf': 0.0,\n 'ET__random_state': None,\n 'ET__splitter': 'random'}"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ET_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=4)),\n",
+    "                           ('ET', ExtraTreeRegressor())])\n",
+    "ET_model.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomizedSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n                   estimator=Pipeline(steps=[('poly',\n                                              PolynomialFeatures(degree=4)),\n                                             ('ET', ExtraTreeRegressor())]),\n                   n_iter=128, n_jobs=-1,\n                   param_distributions={'ET__ccp_alpha': array([ 5,  6, 11,  2,  2,  8]),\n                                        'ET__max_depth': array([67, 57, 31, 94, 82, 27, 59, 90, 35, 98, 82, 66]),\n                                        'ET__max_features': ['auto', 'sqrt',\n                                                             'log2'],\n                                        'ET__min_samples_leaf': array([75, 34, 40, 15, 91, 52, 26, 46, 97, 26, 63, 41]),\n                                        'ET__min_samples_split': array([64, 38, 53, 49, 73, 28, 61, 58, 21, 20, 49, 27])},\n                   refit='r2',\n                   scoring={'me': make_scorer(max_error),\n                            'r2': make_scorer(r2_score)})"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ET_iteration = 128\n",
+    "\n",
+    "ET_grid = {'ET__max_depth': np.random.randint(25, 100, 12),\n",
+    "           'ET__min_samples_split': np.random.randint(20, 90, 12),\n",
+    "           'ET__min_samples_leaf': np.random.randint(14, 100, 12),\n",
+    "           'ET__max_features': ['auto', 'sqrt', 'log2'],\n",
+    "           'ET__ccp_alpha': np.random.randint(0, 12, 6)\n",
+    "           }\n",
+    "\n",
+    "ET_grid_search = RandomizedSearchCV(estimator=ET_model,\n",
+    "                                    param_distributions=ET_grid,\n",
+    "                                    scoring={'r2': make_scorer(r2_score),\n",
+    "                                             'me': make_scorer(max_error)\n",
+    "                                             },\n",
+    "                                    refit='r2',\n",
+    "                                    n_jobs=-1,\n",
+    "                                    n_iter=ET_iteration,\n",
+    "                                    cv=cv)\n",
+    "\n",
+    "ET_grid_search.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'ET__min_samples_split': 53,\n  'ET__min_samples_leaf': 26,\n  'ET__max_features': 'auto',\n  'ET__max_depth': 66,\n  'ET__ccp_alpha': 6},\n 0.7979352579753282)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ET_grid_search.best_params_, ET_grid_search.best_score_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "temp_ET_cv_result = pd.DataFrame(ET_grid_search.cv_results_)\n",
+    "temp_ET_cv_result.to_pickle('../data/cv_results/ET_cv_result.pkl')"
    ],
    "metadata": {
     "collapsed": false,
